--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '2.0.20'
-    }
-    dependencies {
-        classpath "io.objectbox:objectbox-gradle-plugin:3.5.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.20"
-        classpath 'com.jaredsburrows:gradle-license-plugin:0.9.8'
+        kotlin_version = '2.1.20'
     }
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
+    dependencies {
+        classpath "io.objectbox:objectbox-gradle-plugin:3.5.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.20"
+        classpath 'com.jaredsburrows:gradle-license-plugin:0.9.8'
+    }
 }
 
 plugins {
-    id 'com.android.application' version '8.8.0-rc02' apply false
-    id 'com.android.library' version '8.8.0-rc02' apply false
-    id 'org.jetbrains.kotlin.android' version '2.0.20' apply false
+    id 'com.android.application' version '8.8.0' apply false
+    id 'com.android.library' version '8.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
 }
 
 tasks.register('clean', Delete) {
