--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '2.1.20'
+        agp_version = libs.versions.agp.version.get()
+        kotlin_version = libs.versions.kotlin.version.get()
     }
     repositories {
         mavenCentral()
@@ -15,9 +16,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '8.8.0' apply false
-    id 'com.android.library' version '8.8.0' apply false
-    id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.library) apply false
+    id 'org.jetbrains.kotlin.android' version "${kotlin_version}" apply false
 }
 
 tasks.register('clean', Delete) {
